Progress 1st Hour: Added background, Portrait, and Basic text Box

--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,20 @@
 <html>
 
 <head>
+
+	<link rel="stylesheet" type="text/css" href="css/master.css">
+
 </head>
 <body>
-<h1>Micah Harrison</h1>
 
+<div class= "prof-box">
+	<img src="images/portrait.jpg" class="prof-pic">
+	<h1>Micah Harrison</h1>
+	<h5> Just a resume website</h5>
+
+	<p>I just need something to show to all the fluff butts in silicon valley</p>
+
+</div>
 
 </body>
 
