Finished First Website Draft

--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
 
 	<link rel="stylesheet" type="text/css" href="css/master.css">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 </head>
 <body>
@@ -10,9 +11,17 @@
 <div class= "prof-box">
 	<img src="images/portrait.jpg" class="prof-pic">
 	<h1>Micah Harrison</h1>
-	<h5> Just a resume website</h5>
+	<h5> Student at UC Berkeley | Computer Science Major </h5>
 
-	<p>I just need something to show to all the fluff butts in silicon valley</p>
+	<div class="line-break"></div>
+
+	<p>I am currently in school developing skills that will one day help me change the</p>
+
+	<div class="social-icons">
+		<a href= "https://www.facebook.com/micah.harrison.98" target="_blank"> <i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+		<a href= "https://twitter.com/BirdPerson08" target="_blank"> <i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+		<a href= "https://www.linkedin.com/in/micah-harrison-6669ba140/" target="_blank"> <i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+	</div>
 
 </div>
 
