--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-	<link rel="stylesheet" type="text/css" href="/css/master.css">
+	<link rel="stylesheet" type="text/css" href="css/master.css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 </head>
@@ -26,4 +26,4 @@
 </div>
 
 </body>
-</html>asdfas
+</html>
