--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 
 <head>
 
-	<link rel="stylesheet" type="text/css" href="css/Master.css">
+	<link rel="stylesheet" type="text/css" href="css/master.css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 </head>
 <body>
 
 <div class= "prof-box">
-	<img src="images/portrait.jpg" class="prof-pic">
+	<img src="Images/portrait.jpg" class="prof-pic">
 	<h1>Micah Harrison</h1>
 	<h5> Student at UC Berkeley | Computer Science Major </h5>
 
