--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<div class="line-break"></div>
 
-	<p>I am currently in school developing s</p>
+	<p>I am currently in school developing skills that will one day help me change the world.</p>
 
 	<div class="social-icons">
 		<a href= "https://www.facebook.com/micah.harrison.98" target="_blank"> <i class="fa fa-facebook-official" aria-hidden="true"></i></a>
