--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
   	<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 	<link href="css/animate.css" rel="stylesheet"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link href="css/waypoints.css" rel="stylesheet"/>
 	<script src="js/jquery.waypoints.min.js" type="text/javascript"></script>
 	<script src="js/waypoints.js" type="text/javascript"></script>
@@ -112,8 +113,8 @@
 		</div>
 
 		<div id="WorkExperience"><a href="#WorkExperience">
-			<div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="img/work_img.jpg"></a>
-			<div class="About_me" align="right">
+			<div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="img/work3.jpg"></a>
+            <div class="About_me" align="right">
 			<h4 class="post3">Work Expirience</h4>
 			<img src="img/bestjob.jpg" class="pics_parallax3" align="left">
 			<p class="post3"><b>Summer of 2015:</b> Superior: Electrical Mechanical and Plumbing:
@@ -133,9 +134,15 @@
             <div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="img/social_img.jpg"></a>
             <div class="Social" align="left">
                 <h4 class="post4">Social Media</h4>
-                <p class="post4">If you did not get enough of me, check me out on some of social and professional media.</p>
+                <p class="post4">If you didn't get enough of me, check me out on some of social and professional media.</p>
                 </div>
             <a class= "btn" href="#Intro"> Again, from the top! </a>
+            <div class="social-icons" align="right">
+                <a href= "https://www.facebook.com/micah.harrison.98" target="_blank"> <i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                <a href= "https://twitter.com/BirdPerson08" target="_blank"> <i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+                <a href= "https://www.linkedin.com/in/micah-harrison-6669ba140/" target="_blank"> <i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                <a href= "https://github.com/MicahHarrison" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i></a>
+            </div>
         </div>
         </div>
 
@@ -182,7 +189,7 @@
 		<script>
 		jQuery(document).ready(function() {
 	    jQuery('.post3').addClass("hidden").viewportChecker({
-	        classToAdd: 'visible animated zoomInDown',
+	        classToAdd: 'visible animated flipInY',
 	        offset: 100
 	       });
 		});
@@ -190,7 +197,31 @@
 		<script>
 		jQuery(document).ready(function() {
 		    jQuery('.pics_parallax3').addClass("hidden").viewportChecker({
-		        classToAdd: 'visible animated rotateInDownLeft',
+		        classToAdd: 'visible animated bounceInLeft',
+		        offset: 100
+		       });
+			});
+		</script>
+    <script>
+		jQuery(document).ready(function() {
+	    jQuery('.post4').addClass("hidden").viewportChecker({
+	        classToAdd: 'visible animated zoomInDown',
+	        offset: 100
+	       });
+		});
+		</script>
+    <script>
+		jQuery(document).ready(function() {
+		    jQuery('.pics_parallax4').addClass("hidden").viewportChecker({
+		        classToAdd: 'visible animated bounceInLeft',
+		        offset: 100
+		       });
+			});
+		</script>
+<script>
+		jQuery(document).ready(function() {
+		    jQuery('.social-icons').addClass("hidden").viewportChecker({
+		        classToAdd: 'visible animated bounceInLeft',
 		        offset: 100
 		       });
 			});
