--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<div class="parallax-window" data-parallax="scroll" data-z-index="1" data-image-src="img/education2_img.jpg"></a>
 			<div class="About_me" align="right">
 			<h4 class="post2">CS Experience</h4>
-			<img src="img/actualcode.jpg" class="pics_parallax2" align="left">
+                <img src="img/actualcode.jpg" class="pics_parallax2" align="left">
 			<p class="post2">I currently do not have much "in the field" CS experience, and I am hoping that is where you come in, but since starting my education at Berkeley, I have
                 become proficient in coding in Python and Scheme and I am currently learning Java. I am comfortable working with various data types and I am eager to learn as
                 much as I can to become a useful asset in the world of CS. In my spare time, I do try to work on little projects such as this very website.
@@ -105,7 +105,7 @@
                 <li>Able to build positive working relationships that helps everyone achieve their goals and business objectives.</li>
                 <li>Confident in my own abilities and am able to instill confidence in others that they might take on and complete rigorous challenges professionally.</li>
                 <li>Proactive team player who is able to rally up teammates to achieve meaningful contributions to a businesses success.</li>
-            </ul>
+            </ul></div>
 			<a class= "btn" href="#WorkExperience"> Work Experience </a>
 			</div>
 		</div>
