--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <ul class = "pics">
       <li><img src="img/website.jpg" class = "port-pic"></li>
       <li><img src="img/scheme.jpg" class = "port-pic"></li>
-      <li><img src="img/database.JPG" class = "port-pic"></li>
+      <li><img src="img/database.jpg" class = "port-pic"></li>
       <li><img src="img/gitlet.jpg" class = "port-pic"></li>
     </ul>
     <div style="width: 100%;">
