--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
       </ul>
     </div>
     <ul class = "pics">
-      <li><img src="img/website.jpg" class = "port-pic"></li>
+      <li><img src="img/website.JPG" class = "port-pic"></li>
       <li><img src="img/scheme.jpg" class = "port-pic"></li>
-      <li><img src="img/database.jpg" class = "port-pic"></li>
-      <li><img src="img/gitlet.jpg" class = "port-pic"></li>
+      <li><img src="img/database.JPG" class = "port-pic"></li>
+      <li><img src="img/gitlet.JPG" class = "port-pic"></li>
     </ul>
     <div style="width: 100%;">
     <ul class = "text">
