--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name = "viewport" content="width=device-width initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Shrikhand|Prompt|ABeeZee" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="Main.css">
   <!--Animations-->
