making mobile friendly

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div id = "About">
     <h4 align="center" href = "#About">About Me</h4>
     <div class= "container1">
-    <p style="float: left; margin-top: 10%;"><img src="img/me.jpg" class = "prof-pic"></p>
+    <p class="temp"><img src="img/me.jpg" class = "prof-pic"></p>
     <p class = "post">
     Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text
     Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text</p>
