--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
     <div class= "container1">
     <p class="temp"><img src="img/me.jpg" class = "prof-pic"></p>
     <p class = "post">
-    Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text
-    Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text</p>
+    I am just your above average 19 year old Sophomore studying Computer Science at the University of California, Berkeley. I'm looking for my first internship and maybe you can help with that. I am proficient in many languages such as Java, Python, and C. I am also comfortable using Git Version Control, creating data structures, and working with databases. If you are looking for an eager, young, and skilled programmer to intern, then you have come to the right place.</p>
     <h5 align="center"></h5>
   </div>
 </div>
