--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
   </section>
   <section id="rauchbier" class="tab-panel">
     <div id = "tab1">
-    <img src="img/gitlet.jpg" class = "prof-pic2"></p>
+    <img src="img/gitlet.JPG" class = "prof-pic2"></p>
     <p class = "post2">
     C​onstructed and implemented a version-control system mimicking features after git  ● Features included initializing repo, pushing and pulling from local and remote repositories, and merging   ● Used Blob objects to record contents of files by preserving a sha1 encryption of the  contents of the file and  represented commits as special objects with hashmaps of the current Blobs(files)  in the commit. </p>
     </div>
   </section>
   <section id="dunkles" class="tab-panel">
     <div id = "tab1">
-    <img src="img/database.jpg" class = "prof-pic2"></p>
+    <img src="img/database.JPG" class = "prof-pic2"></p>
     <p class = "post2">
      Wrote a miniature relational database management system that stores tables of data  ● Stored table names in the db using a hashmap while the contents of the tables were written and read from special .db  files much like reading/writing from CSV files  ● System included a query language interpreter modeled after SQL</p>
     </div>
