--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     <div id = "About-int">
       <h1 align="center">"The best thing about a boolean is even if you are wrong, you are only off by a bit." --(Anonymous)</h1>
     </div>
-  <div class = "first">
+  <div class = "first" href = "#About">
     <div id = "About">
-    <h4 align="center" href = "#About">About Me</h4>
+    <h4 align="center" >About Me</h4>
       <div class= "container1">
       <p class="temp"><img src="img/me.jpg" class = "prof-pic"></p>
       <p class = "post">
