updated bio, change game video, update resume

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <li><a href = "#Intro" class = "links">Home</a></li>
         <li><a href = "#About" class = "links">About Me</a></li>
         <li><a href = "#Portfolio" class = "links">Portfolio</a></li>
-        <li><a href = "./RESUME.docx.pdf" class = "links" target="_blank">Resume</a></li>
+        <li><a href = "./RESUME.pdf" class = "links" target="_blank">Resume</a></li>
       </ul>
     </nav>
     <div class="content">
@@ -117,7 +117,9 @@
       <div class= "container1">
       <p class="temp"><img src="img/me.jpg" class = "prof-pic"></p>
       <p class = "post">
-      I am just your above average 20yr old Junior studying Computer Science at the University of California, Berkeley. I'm looking for my first internship and maybe you can help with that. I am proficient in many languages such as Java, Python, and C. I am also comfortable using Git Version Control, creating data structures, and working with databases. If you are looking for an eager, young, and skilled programmer to intern, then you have come to the right place.</p>
+      Hello, my name is Micah and I am a third-year studying Computer Science at UC Berkeley. I am an eager, inquisitive, and determined student that loves challenges and actively seeks leadership roles.
+      I am currently looking for an internship position for the Summer of 2019. I have worked on a wide range of projects from basic web dev to machine learning with Tensorflow. I love learning new technologies and being as versatile as possible when it comes to my skill set. I am familiar with most modern programming languages like python and java and I am very comfortable using version-control systems. I have also taken courses that focused on major computers science topics such as data structures and advanced algorithms.
+       I am also a project leader in a CS club I am a part of called Codeology because I enjoy teaching just as much as I enjoy learning. If you think my education, experience, and personality might be a good fit at your workplace, feel free to message me anytime. Have a great day!
       </div>
     </div>
   </div>
