--- a/proj_pages/project4.html
+++ b/proj_pages/project4.html
@@ -10,7 +10,7 @@
 <div class = "first">
     <h1 align="center" href = "#About">Gitlet</h1>
 	<div class= "container1">
-	<img src="../img/me.jpg" class="proj-pic">
+	<img src="../img/gitlet2.jpg" class="proj-pic">
 	<div class = "post">
 		<p>
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</p>
