updated project descriptions

--- a/proj_pages/project2.html
+++ b/proj_pages/project2.html
@@ -16,7 +16,7 @@
 	</video>
 	<div class = "post">
 		<p>
-		Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</p>
+		In this project, I learned how to use Tensorflow models to get a cool object detection model up and running. Getting the default tensorflow object detection model to work was fun and all but the best part was learning how to train a default model to recognize custom objects. With this incredible oppurtunity to train it to recognize anything in the world, it only seemed logical to teach it to recognize mac-n-cheese and hotdogs so thats exaclty what I did. I then adapted the model to work with live video using open-CV but this result in a sort of laggy experience. Luckily enough in my search to improve the experience, I found that it worked best when adapted to process pre-recorded video like the one provided as an example on the left. Now I lead this project in a CS club I am a part of called Codeology. I help 9+ club members develop this project over a 4 week period. I teach different key concepts of machine learning along the way to help members get a taste of what machine learning is all about.</p>
 		<table class ="nav_buttons">
 		<tr>
 		  <td class = "left_button">
