--- a/proj_pages/project3.html
+++ b/proj_pages/project3.html
@@ -16,7 +16,7 @@
 	</video>
 	<div class = "post">
 		<p>
-		Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</p>
+		This was one of my favorite projects to work on. Intrestlingly, this started off as a crowdsource type of game for a relitively famous youtuber but out of the 15-ish programmers to sign up to help, I was the only one that actually worked on it and I loved it. Before this, I had no experience in Unity or C# but game development has always been an intrest of mine so out of curiosity, I took it upon myself to learn this new tech. Using youtube tutorials, unity documentation, and free sprites I was able to build a working 2d beat-em-up style game complete with user preferance controls, a player upgrade sytem, and save game mechanics. I even learned how to package the game into an installer so if you are truly interested in playing, I can send you a downloader and you can try it yourself!</p>
 		<table class ="nav_buttons">
 		<tr>
 		  <td class = "left_button">
