--- a/proj_pages/project4.html
+++ b/proj_pages/project4.html
@@ -13,7 +13,7 @@
 	<img src="../img/gitlet2.jpg" class="proj-pic">
 	<div class = "post">
 		<p>
-		Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</p>
+		This was probably on of the more challenging and rewarding projects I was a part of. Gitlet was an academic project where we were tasked with builing a program, from scratch, to mimic the features of Git. By starting from scratch we were able to design our program however we liked and we learned the in's and out's of how merging, branching, and pushing worked within Git. Written entirely in Java, we were able to showcase our abilities in object oriented programing and demonstrate our knowledge of various data structures. </p>
 		<table class ="nav_buttons">
 		<tr>
 		  <td class = "left_button">
