--- a/proj_pages/project6.html
+++ b/proj_pages/project6.html
@@ -13,7 +13,7 @@
 	<img src="../img/me.jpg" class="proj-pic">
 	<div class = "post">
 		<p>
-		Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</p>
+		In this project, I implemented a supervised learning algorithm to predict how a user would rate a restaruant. It would do this by performing simple least-square linear regression on features of restaurants a user has previously rated such as cost or distance in order to use these same feautres to predict their rating for a restarant they have not been to.</p>
 		<table class ="nav_buttons">
 		<tr>
 		  <td class = "left_button">
