--- a/proj_pages/project5.html
+++ b/proj_pages/project5.html
@@ -13,7 +13,8 @@
 	<img src="../img/me.jpg" class="proj-pic">
 	<div class = "post">
 		<p>
-		Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</p>
+		For this project, I created a miniature relational database system in Java. This system stored tables of data that we were able to perform operations on. It supported a subset of MySQL commands such as select, where, and join clauses. This project taught the structure of a database and how operations worked internally as well as how to read in, edit, and write back to files in Java.
+		</p>
 		<table class ="nav_buttons">
 		<tr>
 		  <td class = "left_button">
